k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: simple-web-app
